--- a/projects/strandnoveller/content/tableofcontent.tex
+++ b/projects/strandnoveller/content/tableofcontent.tex
@@ -7,7 +7,7 @@
 \blank[4*line]
 \setupwhitespace[line]
 \setupnarrower[middle=2cm]
-\startnarrower
+\startnarrower[middle]
 \tfa
 Middagsgästen\hfill\at[middagsgästen]\par
 
