--- a/projects/suif/suif.tex
+++ b/projects/suif/suif.tex
@@ -2,6 +2,80 @@
 
 \starttext
 
+De båda nunnorna lydde först med
+fogligheten hos klostersystrar, som voro
+vana vid underkastelse. Sedan visade
+sig greven och grevinnan, följda av
+manufakturhandlaren och hans hustru,
+sedan Loiseau, som sköt sin stora fru
+framför sig. Då han satte foten på marken
+sade han till officeraren ett: ”God
+dag, min herre!” Det var snarare en försiktighet
+än en artighet. Ohövlig som
+alla maktägande, såg den senare på honom
+utan att svara.
+
+Fastän de suttit närmast dörren,
+stego Fettpärlan och Cornudet av sist,
+allvarliga och värdiga inför fienden.
+Den tjocka flickan försökte behärska
+sig och vara lugn, rabulisten strök med
+en tragisk och något darrhänt gest sitt
+långa, rödaktiga skägg. De ville bevara
+sin värdighet, de förstodo, att vid sådana
+här sammanträffanden representerar
+var och en en smula sitt land.
+
+De båda nunnorna lydde först med
+fogligheten hos klostersystrar, som voro
+vana vid underkastelse. Sedan visade
+sig greven och grevinnan, följda av
+manufakturhandlaren och hans hustru,
+sedan Loiseau, som sköt sin stora fru
+framför sig. Då han satte foten på marken
+sade han till officeraren ett: ”God
+dag, min herre!” Det var snarare en försiktighet
+än en artighet. Ohövlig som
+alla maktägande, såg den senare på honom
+utan att svara.
+
+Fastän de suttit närmast dörren,
+stego Fettpärlan och Cornudet av sist,
+allvarliga och värdiga inför fienden.
+Den tjocka flickan försökte behärska
+sig och vara lugn, rabulisten strök med
+en tragisk och något darrhänt gest sitt
+långa, rödaktiga skägg. De ville bevara
+sin värdighet, de förstodo, att vid sådana
+här sammanträffanden representerar
+var och en en smula sitt land.
+
+De båda nunnorna lydde först med
+fogligheten hos klostersystrar, som voro
+vana vid underkastelse. Sedan visade
+sig greven och grevinnan, följda av
+manufakturhandlaren och hans hustru,
+sedan Loiseau, som sköt sin stora fru
+framför sig. Då han satte foten på marken
+sade han till officeraren ett: ”God
+dag, min herre!” Det var snarare en försiktighet
+än en artighet. Ohövlig som
+alla maktägande, såg den senare på honom
+utan att svara.
+
+Fastän de suttit närmast dörren,
+stego Fettpärlan och Cornudet av sist,
+allvarliga och värdiga inför fienden.
+Den tjocka flickan försökte behärska
+sig och vara lugn, rabulisten strök med
+en tragisk och något darrhänt gest sitt
+långa, rödaktiga skägg. De ville bevara
+sin värdighet, de förstodo, att vid sådana
+här sammanträffanden representerar
+var och en en smula sitt land.
+
+\page[yes]
+
 \startlines
 Page layout after Boule de Suif, Bonniers 1941.
 Set with ETbb 11/13.15, 24pc measure.
