--- a/projects/strandnoveller/nio-environment.tex
+++ b/projects/strandnoveller/nio-environment.tex
@@ -6,8 +6,10 @@
 %% F O N T S
 %%
 
-\setupbodyfont[cochineal,11pt]
-\definebodyfontenvironment[10pt][interlinespace=13.5pt]
+
+\setupbodyfont[arnopro,11pt]
+\definebodyfontenvironment[10pt][interlinespace=12pt]
+\definebodyfontenvironment[11pt][interlinespace=14pt]
 \definesymbol[leaf][\fontchar{leaf}] % by name
 
 %%
@@ -26,21 +28,22 @@
     grid=yes,
     marking=on,
    % TOP TO BOTTOM    
-    topspace=\dimexpr(17.5mm-(2\baselineskip)),
+    topspace=12mm,
     header=1\baselineskip,
     headerdistance=1\baselineskip,
-    height=41\baselineskip,
+    height=37\baselineskip\relax,
     footerdistance=1\baselineskip,
     footer=2\lineheight,
    % INNER TO OUTER
-%    backspace=\dimexpr(\paperwidth/8)\relax,% twosided
-    backspace=19mm,% onesided
-    leftmargin=0pt,
-    leftmargindistance=0pt,
-    width=111mm,
+    backspace=22.5mm,
+    leftmargin=64pt,
+    leftmargindistance=9pt,
+    width=103mm,
     rightmargin=64pt,
     rightmargindistance=16pt,
 ]
+
+
 
 \setuppagenumbering[alternative=doublesided, location=,]
 
@@ -96,7 +99,7 @@
 
 \setupitaliccorrection[text]
 
-\setupalign[hanging,hz,tolerant] % microtypography, allow some stretching
+\setupalign[hanging,hz,verytolerant] % microtypography, allow some stretching
 
 %%
 %% H E A D E R S   &   F O O T E R S
@@ -126,39 +129,39 @@
 % M
 
 \define[1]\dropcapM{%
-    \definefont[capfont][Serif at 49pt]
+    \definefont[capfont][file:ArnoPro-LightDisplay at 54pt]
     \definefont[quotefont][Serif at 16pt]
     \noindent\kern -0.08em
     {\capfont M}
     \vskip-4\baselineskip
-    \dimen1=3.85em
-    \dimen2=3.85em
-    \dimen3=3.85em
+    \dimen1=4.05em
+    \dimen2=4.15em
+    \dimen3=4.15em
     \parshape 4
         \dimen1 \dimexpr\hsize-\dimen1
         \dimen2 \dimexpr\hsize-\dimen2       
         \dimen3 \dimexpr\hsize-\dimen3     
         0pc \hsize                                   
-    \noindent{\kerncharacters[0.14]\sc #1}%            
+    \noindent{\feature[-][liga]\kerncharacters[0.14]\sc #1}%            
 }
 
 % D
 
 \define[1]\dropcapD{%
-    \definefont[capfont][Serif at 49pt]
+    \definefont[capfont][file:ArnoPro-LightDisplay at 54pt]
     \definefont[quotefont][Serif at 16pt]
     \noindent\kern -0.16em
     {\capfont D}
     \vskip-4\baselineskip
-    \dimen1=2.73em
-    \dimen2=3.2em
-    \dimen3=2.9em
+    \dimen1=3.1em
+    \dimen2=3.5em
+    \dimen3=3.2em
     \parshape 4
         \dimen1 \dimexpr\hsize-\dimen1
         \dimen2 \dimexpr\hsize-\dimen2       
         \dimen3 \dimexpr\hsize-\dimen3     
         0pc \hsize                                   
-    \noindent{\kerncharacters[0.14]\sc #1}%            
+    \noindent{\feature[-][liga]\kerncharacters[0.14]\sc #1}%            
 }
 
 %%
@@ -171,9 +174,9 @@
 
 %\enabletrackers[visualizers.justification]
 
-\adaptlayout[7][lines=+1]
-\adaptlayout[11][lines=+1]
-\adaptlayout[14][lines=+1]
+%\adaptlayout[7][lines=+1]
+%\adaptlayout[11][lines=+1]
+%\adaptlayout[14][lines=+1]
 
 
 \stopenvironment
