--- a/projects/strandnoveller/nio-environment.tex
+++ b/projects/strandnoveller/nio-environment.tex
@@ -7,9 +7,10 @@
 %%
 
 
-\setupbodyfont[arnopro,11pt]
+\setupbodyfont[sabonnext,11pt]
 \definebodyfontenvironment[10pt][interlinespace=12pt]
-\definebodyfontenvironment[11pt][interlinespace=14pt]
+\definebodyfontenvironment[11pt][interlinespace=15pt]
+\definebodyfontenvironment[12pt][interlinespace=16pt]
 \definesymbol[leaf][\fontchar{leaf}] % by name
 
 %%
@@ -31,7 +32,7 @@
     topspace=12mm,
     header=1\baselineskip,
     headerdistance=1\baselineskip,
-    height=37\baselineskip\relax,
+    height=35\baselineskip\relax,
     footerdistance=1\baselineskip,
     footer=2\lineheight,
    % INNER TO OUTER
