--- a/projects/strandnoveller/nio-environment.tex
+++ b/projects/strandnoveller/nio-environment.tex
@@ -7,10 +7,11 @@
 %%
 
 
-\setupbodyfont[sabonnext,11pt]
+\setupbodyfont[arnopro,13pt]
 \definebodyfontenvironment[10pt][interlinespace=12pt]
 \definebodyfontenvironment[11pt][interlinespace=15pt]
 \definebodyfontenvironment[12pt][interlinespace=16pt]
+\definebodyfontenvironment[13pt][interlinespace=15pt]
 \definesymbol[leaf][\fontchar{leaf}] % by name
 
 %%
