--- a/test/sixtysixchars/sixtysixchars.tex
+++ b/test/sixtysixchars/sixtysixchars.tex
@@ -44,6 +44,16 @@ Measure: 24pc = 66 characters
 12pt\par
 Measure: 26pc = 66 characters
 
+\switchtobodyfont[arnopro,12pt]
+\displayalphabetlength
+12pt\par
+Measure: 26pc = 66 characters
+
+\switchtobodyfont[arnopro,12pt]
+\displayalphabetlength
+12pt\par
+Measure: 26pc = 66 characters
+
 
 ---
 
