--- a/projects/strandnoveller/content/tableofcontent.tex
+++ b/projects/strandnoveller/content/tableofcontent.tex
@@ -15,17 +15,17 @@ Fiskmannen\hfill\at[fiskmannen]\par
 
 En ny dag\hfill\at[ennydag]\par
 
-Tvättcykler\hfill\at[tvättcykler]\par
-
-Trollbunden\hfill\at[trollbunden]\par
-
-Ny på jobbet\hfill\at[nypåjobbet]\par
+Fästfolket\hfill\at[fastfolket]\par
 
 Duschen\hfill\at[duschen]\par
 
-Naturligt ska det va’\hfill\at[naturligtskadetva]\par
+Trollbunden\hfill\at[trollbunden]\par
 
-Hålet\hfill\at[hålet]\par
+Ny på jobbet\hfill\at[nypajobbet]\par
+
+Den nakna sanningen\hfill\at[dennaknasanningen]\par
+
+Hålet\hfill\at[halet]\par
 
 \stopnarrower
 \stop
