--- a/projects/suif/suif.tex
+++ b/projects/suif/suif.tex
@@ -2,7 +2,9 @@
 
 \starttext
 
-De båda nunnorna lydde först med
+\setbox0\hbox{x}
+
+\noindent\raise\ht0\hbox{\rlap{\blackrule[height=1pt,depth=1pt,width=5em]}}xxxxx
 fogligheten hos klostersystrar, som voro
 vana vid underkastelse. Sedan visade
 sig greven och grevinnan, följda av
@@ -73,19 +75,6 @@ långa, rödaktiga skägg. De ville bevara
 sin värdighet, de förstodo, att vid sådana
 här sammanträffanden representerar
 var och en en smula sitt land.
-
-\page[yes]
-
-\startlines
-Page layout after Boule de Suif, Bonniers 1941.
-Set with ETbb 11/13.15, 24pc measure.
-Page proportion: 1.5
-Textblock proportion: 1.5
-Margins: spine = page width / 9; top = page height / 9; edge = 2 $\times$ spine
-
-\stoplines
-
-\blank[line]
 
 \noindent Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta sit amet ex at placerat. Duis sit amet venenatis augue. Pellentesque vestibulum elit ac lobortis rhoncus. Vestibulum ullamcorper molestie nisl, quis fermentum dui euismod ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi a fermentum erat. Nam sagittis semper lectus, non pharetra mauris euismod sit amet.
 
