--- a/test/sixtysixchars/sixtysixchars.tex
+++ b/test/sixtysixchars/sixtysixchars.tex
@@ -62,17 +62,19 @@ Measure: 26pc = 66 characters
 
 \switchtobodyfont[dejavu,10pt]
 \displayalphabetlength
+10pt\par
 
-10pt
 \switchtobodyfont[etbb,10pt]
 \displayalphabetlength
+10pt\par
 
-11pt
+
 \switchtobodyfont[etbb,11pt]
 \displayalphabetlength
+11pt\par
 
-12pt
 \switchtobodyfont[etbb,12pt]
 \displayalphabetlength
+12pt\par
 
 \stoptext
