--- a/projects/suif/suif.tex
+++ b/projects/suif/suif.tex
@@ -5,111 +5,37 @@
 %\setbox0\hbox{abcdefghijklmnopqrstuvwxyz}
 %\the\wd0
 
-%\placeongrid{\noindent{\tfd\feature[+][ss06]a}\tfb~\kerncharacters[0.14]CHAPTER ONE}
+\mychapter{}{WHY CATS PAINT: FELINE AESTHETICS IN THEORY AND PRACTICE}
 
-%\blank[2*line]
+\dropcapS{ome test text} in ArnoPro 11/12, using smalltext, subheading, and display
+design sizes. 
+While theories on the aesthetics of nonprimate
+signing are hardly new, we are aware that the great popularity
+of the domestic cat as a pet means any attempt to describe their
+marks as art carries with it certain dangers. The growing commercial
+value of cat art has, for example, led not only to some misguided
+breeding programs, but also to a few cases, thankfully rare, where 
+cats have been trained to create art for reward.
 
-    \definefont[myleaffont][file:SabonNextLTPro-Regular at 22pt]
-    \definefont[mychapfont][file:SabonNextLTPro-Display at 14pt]
+It is our belief that we must suppress our desire to see cats
+confirming our perceptions and values through their art, and rather than
+attempting to determine the direction of their aesthetic development on our terms,
+we must allow those few cats who paint to develop their own special potential.
+Only in this way can we be certain they will be able to communicate their
+unique, undiluted view of the world and perhaps provide us with the
+clues we need to ensure the survival and future wellbeing of all species – provided, of course, we can trust them to tell us the truth.
 
-\placeongrid{\noindent{\setupbodyfont[18pt]\feature[+][ss06] a}\hskip0.8em \framed[frame=off,location=top,align={flushleft,nothyphenated}]{\mychapfont \spaceskip0.33em \kerncharacters[0.14]MEGAN IS THE CUTEST GIRL\blank[line] IN THE WORLD, AND I LOVE \blank[line]  HER SO MUCH}}
-\blank[2*line]
+We shall never know the origin of the primal feline aesthetic gesture, but it seems that
+wherever domestic cats are well looked after and have little need to define
+their territories, their marking behavior tends, in some rare instances, to become
+what Desmond Morris calls a self-rewarding activity. They normally occur in animals which have their
+survival problems under control and have a surplus of nervous activity that seems to require
+an outlet.
 
-\dropcapS{å börjar historien} om fogligheten hos de klostersystrar som voro
-vana vid underkastelse. Sedan visade
-sig greven och även grevinnan, följda av
-manufakturhandlaren och hans fru,
-sedan Loiseau, som sköt sin stora hustru
-framför sig. Då han satte foten på marken
-sade han till officeraren ett: ”God
-dag, min herre!” Det var snarare en försiktighet
-än en artighet. Ohövlig som
-alla maktägande, såg den senare på honom
-utan att svara.
-
-Fastän de suttit närmast dörren,
-stego Fettpärlan och Cornudet av sist,
-allvarliga och värdiga inför fienden.
-Den tjocka flickan försökte behärska
-sig och vara lugn, rabulisten strök med
-en tragisk och något darrhänt gest sitt
-långa, rödaktiga skägg. De ville bevara
-sin värdighet, de förstodo, att vid sådana
-här sammanträffanden representerar
-var och en en smula sitt land.
-
-De båda nunnorna lydde först med
-fogligheten hos klostersystrar, som voro
-vana vid underkastelse. Sedan visade
-sig greven och grevinnan, följda av
-manufakturhandlaren och hans hustru,
-sedan Loiseau, som sköt sin stora fru
-framför sig. Då han satte foten på marken
-sade han till officeraren ett: ”God
-dag, min herre!” Det var snarare en försiktighet
-än en artighet. Ohövlig som
-alla maktägande, såg den senare på honom
-utan att svara.
-
-Fastän de suttit närmast dörren,
-stego Fettpärlan och Cornudet av sist,
-allvarliga och värdiga inför fienden.
-Den tjocka flickan försökte behärska
-sig och vara lugn, rabulisten strök med
-en tragisk och något darrhänt gest sitt
-långa, rödaktiga skägg. De ville bevara
-sin värdighet, de förstodo, att vid sådana
-här sammanträffanden representerar
-var och en en smula sitt land.
-
-De båda nunnorna lydde först med
-fogligheten hos klostersystrar, som voro
-vana vid underkastelse. Sedan visade
-sig greven och grevinnan, följda av
-manufakturhandlaren och hans hustru,
-sedan Loiseau, som sköt sin stora fru
-framför sig. Då han satte foten på marken
-sade han till officeraren ett: ”God
-dag, min herre!” Det var snarare en försiktighet
-än en artighet. Ohövlig som
-alla maktägande, såg den senare på honom
-utan att svara.
-
-Fastän de suttit närmast dörren,
-stego Fettpärlan och Cornudet av sist,
-allvarliga och värdiga inför fienden.
-Den tjocka flickan försökte behärska
-sig och vara lugn, rabulisten strök med
-en tragisk och något darrhänt gest sitt
-långa, rödaktiga skägg. De ville bevara
-sin värdighet, de förstodo, att vid sådana
-här sammanträffanden representerar
-var och en en smula sitt land.
-
-\noindent Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed porta sit amet ex at placerat. Duis sit amet venenatis augue. Pellentesque vestibulum elit ac lobortis rhoncus. Vestibulum ullamcorper molestie nisl, quis fermentum dui euismod ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi a fermentum erat. Nam sagittis semper lectus, non pharetra mauris euismod sit amet.
-
-Suspendisse potenti. Aenean auctor iaculis tortor, id dignissim arcu accumsan sed. Donec semper sagittis est et tempor. Duis non sapien tincidunt purus maximus imperdiet. Proin tempus fermentum fringilla. Duis tincidunt nunc a convallis ornare. Praesent vitae imperdiet dolor. Integer dictum tincidunt nunc, ac pretium risus scelerisque vel. Aliquam ut nisl id ipsum convallis sollicitudin. Cras interdum nisi non dictum suscipit.
-
-Aliquam erat volutpat. Quisque interdum pulvinar quam. Cras pellentesque arcu sed blandit placerat. Duis ultrices malesuada mauris in placerat. Nunc non ipsum eu mauris lobortis efficitur. Nulla consequat scelerisque fermentum. Fusce iaculis molestie est aliquam ultrices.
-
-Integer tellus ante, scelerisque in porttitor eu, varius sit amet nunc. Donec convallis mauris in lacinia convallis. Vivamus sagittis rhoncus sollicitudin. Proin semper libero sit amet justo viverra efficitur. Duis leo ante, laoreet at turpis eget, faucibus convallis metus. Aliquam elementum libero id justo tincidunt mollis. Proin non maximus massa. Vestibulum nec bibendum nibh. Fusce enim elit, interdum facilisis purus non, suscipit dapibus ligula. Integer pellentesque tincidunt mi, nec auctor odio. In semper mauris eu tincidunt tempor. Curabitur tincidunt aliquet diam eu dignissim. Cras eget vestibulum leo, nec aliquam quam. Fusce neque nulla, vulputate vel justo ac, ultrices auctor mauris.
-
-Curabitur ac nunc eu nisi hendrerit malesuada. Donec vestibulum nec arcu vel vehicula. In hendrerit accumsan felis, nec placerat sem suscipit in. Integer dictum vestibulum tortor et vestibulum. Pellentesque viverra nisl mollis purus malesuada, eget vehicula nibh consequat. Vivamus viverra, risus cursus auctor porta, enim tortor tincidunt eros, a rutrum mauris mauris et ante. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Donec a tortor aliquet, vulputate odio nec, aliquet augue. Quisque faucibus metus vitae tellus porta tincidunt. Fusce eu vulputate risus, maximus fermentum turpis. Nullam finibus sagittis faucibus. Etiam euismod convallis orci non placerat. Vivamus urna ante, consequat et nulla eu, lobortis rhoncus dolor. Phasellus ut mollis nunc, vel faucibus nisi. Maecenas suscipit neque eget pretium sodales. Maecenas nec tincidunt dui, id suscipit metus.
-
-Fusce porta, mauris a semper consectetur, lorem erat semper felis, in lacinia eros lacus ut neque. Nulla tempor mi quis massa accumsan, id commodo massa malesuada. Curabitur consequat arcu sit amet erat mattis sagittis. In hac habitasse platea dictumst. Aenean suscipit posuere lacus. Ut volutpat vitae mi sit amet condimentum. Nunc nec ex sed augue convallis volutpat at ac nibh. Sed nibh justo, cursus at sagittis eget, varius id quam. Aenean malesuada urna vitae nibh auctor, eget scelerisque risus efficitur. Integer rhoncus, sapien et volutpat feugiat, lacus leo vulputate lorem, eget imperdiet nunc est quis nisl.
-
-Quisque cursus molestie libero nec finibus. Nunc sed elementum sapien. Aenean at nulla a est egestas aliquet at sed lorem. Nullam tellus ligula, vestibulum vitae mi non, efficitur vestibulum leo. Suspendisse non sem ac turpis malesuada sollicitudin. Donec ex erat, venenatis sit amet elit vitae, ornare rutrum enim. Aliquam erat volutpat. Phasellus egestas eros vel porta aliquet. Vivamus sodales vulputate pellentesque. Nulla ut tempor augue, ut rhoncus nisl. Suspendisse imperdiet leo ac gravida dictum. Duis nec fermentum orci. Aenean posuere tellus quam, ut vehicula nisi vehicula in.
-
-Sed convallis, metus eget bibendum efficitur, sem lacus hendrerit libero, vitae rhoncus leo ligula quis mi. Aliquam eu nisl erat. Duis quis arcu fringilla, euismod metus non, fermentum erat. Nullam interdum blandit tellus, eu dapibus ante tristique eu. Curabitur quis augue at purus vulputate sagittis vitae sit amet massa. Mauris quis lacinia mauris. Aenean pellentesque efficitur quam, non suscipit magna placerat quis. Vestibulum feugiat lacus varius, auctor sapien sit amet, porttitor tellus. Sed in iaculis purus. Nunc suscipit massa a sapien feugiat, et rutrum est lobortis. Sed ut imperdiet libero. Ut porttitor quam sed diam euismod, sed ultrices risus cursus. In tincidunt diam at elit dapibus fermentum. Donec aliquet euismod porta.
-
-Donec hendrerit lectus porta neque viverra finibus. Maecenas cursus pretium gravida. Ut consectetur massa id suscipit lobortis. Maecenas at dapibus libero, nec fermentum odio. Nulla faucibus nunc vel nibh fermentum, sagittis facilisis sem mollis. Ut vulputate turpis vel rutrum luctus. Sed consectetur dolor sapien, a placerat erat viverra at. Duis non eleifend massa. Nulla vestibulum purus ac diam interdum, a tincidunt urna congue. Mauris rhoncus cursus eros, sit amet tincidunt eros tristique quis. In hac habitasse platea dictumst.
-
-Nunc sem lorem, dictum nec dolor ac, blandit vestibulum metus. Mauris in semper dui, ac suscipit nibh. Fusce neque mi, semper vitae diam convallis, consequat volutpat erat. Praesent sit amet leo justo. Mauris id tempor felis. Aliquam laoreet aliquet risus eget ornare. Mauris eu orci tempus, gravida nunc tempus, egestas est. Donec id purus quam. Pellentesque malesuada tristique consequat.
-
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Etiam vitae tincidunt odio. Phasellus vel aliquet risus. In imperdiet at lacus id luctus. Praesent semper metus sed quam rutrum, at ultrices arcu scelerisque. Ut pulvinar nisl a risus facilisis pharetra. Vestibulum vulputate nibh nisl, ac fringilla massa rutrum sit amet. Sed gravida tempus risus.
-
-Vivamus posuere vel dui sit amet vestibulum. Nam efficitur nibh quis lacus rhoncus, a ullamcorper dolor imperdiet. Proin a turpis maximus quam euismod ornare et in justo. Etiam vehicula, sem non laoreet aliquet, nunc odio vehicula tellus, id luctus erat nunc ac erat. Quisque libero est, pharetra a arcu id, molestie semper dui. Donec eget lorem vel velit gravida luctus id sed mauris. Cras pellentesque ligula ac suscipit finibus. Pellentesque rhoncus sem non tincidunt blandit. Nunc pharetra et enim id gravida. Donec commodo sit amet lectus id pharetra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut ut justo eu nisi tempus pretium. Integer nec velit enim. Nunc elementum ipsum a mi iaculis, eget volutpat diam pellentesque. Aenean tempor erat et nisl ornare, a consectetur nulla feugiat.
-
-Sed vel blandit metus. Morbi in odio bibendum, bibendum purus non, tincidunt est. Aenean tempus ac orci sit amet placerat. Mauris id massa faucibus, auctor orci ac, iaculis mi. Nunc nec dui consequat, arcu mauris in placerat. Nunc non ipsum eu mauris lobortis efficitur, ornare consequat scelerisque fermentum. Fusce iaculis allis. Vivamus sagittis rhoncus sollicitudin. Proin semper libero sit amet justo viverra efficitur.
+Because cats show a distinct preference for the works of Van Gogh, usually attributed
+to their being able to relate to the swirling furlike nature of the brushstrokes, Williams chose
+four posters of this artist’s work and set them low on the wall in the cats’ living space.
+By measuring the amount of time each cat spent looking at the different pictures over a six-week period, he was able to identify where cats had preferred sitting positions in the room, which he called “points of harmonic resonance”. He noticed that cats spent a large amount of time purring in these places prior to painting and has theorized that some kind of force field, detectable only to cats, may
+trigger the feline aesthetic response.
 
 \stoptext
