--- a/projects/suif/suif.tex
+++ b/projects/suif/suif.tex
@@ -7,8 +7,37 @@
 
 \mychapter{}{WHY CATS PAINT: FELINE AESTHETICS IN THEORY AND PRACTICE}
 
-\dropcapS{ome test text} in ArnoPro 11/12, using smalltext, subheading, and display
+\dropcapS{ome test text} in ArnoPro 12/15, using regular weight and display
 design sizes. 
+While theories on the aesthetics of nonprimate
+signing are hardly new, we are aware that the great popularity
+of the domestic cat as a pet means any attempt to describe their
+marks as art carries with it certain dangers. The growing commercial
+value of cat art has, for example, led not only to some misguided
+breeding programs, but also to a few cases, thankfully rare, where 
+cats have been trained to create art for reward.
+
+It is our belief that we must suppress our desire to see cats
+confirming our perceptions and values through their art, and rather than
+attempting to determine the direction of their aesthetic development on our terms,
+we must allow those few cats who paint to develop their own special potential.
+Only in this way can we be certain they will be able to communicate their
+unique, undiluted view of the world and perhaps provide us with the
+clues we need to ensure the survival and future wellbeing of all species – provided, of course, we can trust them to tell us the truth.
+
+We shall never know the origin of the primal feline aesthetic gesture, but it seems that
+wherever domestic cats are well looked after and have little need to define
+their territories, their marking behavior tends, in some rare instances, to become
+what Desmond Morris calls a self-rewarding activity. They normally occur in animals which have their
+survival problems under control and have a surplus of nervous activity that seems to require
+an outlet.
+
+Because cats show a distinct preference for the works of Van Gogh, usually attributed
+to their being able to relate to the swirling furlike nature of the brushstrokes, Williams chose
+four posters of this artist’s work and set them low on the wall in the cats’ living space.
+By measuring the amount of time each cat spent looking at the different pictures over a six-week period, he was able to identify where cats had preferred sitting positions in the room, which he called “points of harmonic resonance”. He noticed that cats spent a large amount of time purring in these places prior to painting and has theorized that some kind of force field, detectable only to cats, may
+trigger the feline aesthetic response.
+
 While theories on the aesthetics of nonprimate
 signing are hardly new, we are aware that the great popularity
 of the domestic cat as a pet means any attempt to describe their
