--- a/projects/isaif/isaif.tex
+++ b/projects/isaif/isaif.tex
@@ -2,12 +2,13 @@
 
 \starttext
   \startfrontmatter
-%    \input titlepage
+    \input titlepage
+%    \input toc
   \stopfrontmatter
   
   \startbodymatter
 
-\input mainchapters
+\input mainchaptersnogaps
 \input endnotes
 
   \stopbodymatter
